WP-9010 Fixing the margin-right so the search icon does not get lost on smaller browser windows.

--- a/css/style.css
+++ b/css/style.css
@@ -9300,7 +9300,7 @@ input.signup-submit:hover {
 @media (min-width: 74.9375em) {
   .page-seed #navigation,
   .page-exec-ed #navigation {
-    margin-right: 0;
+    margin-right: 35px;
   }
 }
 
