--- a/sass/partials/design/_md-megamenu-main.sass
+++ b/sass/partials/design/_md-megamenu-main.sass
@@ -140,7 +140,7 @@
 .page-seed #navigation,
 .page-exec-ed #navigation
   +breakpoint(1199px min-width)
-    margin-right: 0
+    margin-right: 35px
 .page-insights
   #md-megamenu-1.awemenu-mobile-standard.md-mobile-style2
     .awemenu-bars
